# BIL142Proje

./: .gitignore  CMakeLists.txt  GAME_FUNCTIONS.h  GITHUB_PROJECT_URL.txt  GameEngine.cpp  GameEngine.h  GamePlayr.cpp  GamePlayr.h  GameStarter.cpp  GameStarter.h  Game_Start.h  General.cpp  General.h  GeneralFunc.cpp  GeneralFunc.h  README.md  Ship.cpp  Ship.h  ShipProperty.cpp  ShipProperty.h  SpaceVoyage.cpp  SpaceVoyage.h  event.cpp  event.h  fast  game.cpp  game.h  loop_based_approach_for_pirates.txt  main.cpp  n1_100  n1_200  normal  recursion_based_approach_for_pirates.txt  ship.cpp  ship.h  strong
diagrams/: class_diagram.puml
